# codex

./: .bazelrc  .buckconfig  .gitignore  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .run  AGENTS.md  BUILD.bazel  MODULE.bazel  PLAN.md  PR-refactor.md  PR.md  README.md  feature-a.patch  justfile  patch  rbe.bzl
.devcontainer/: Dockerfile
.github/: dotslash-config.json
.github/actions/linux-code-sign/: action.yml
.github/workflows/: bazel.yml  buck2.yml  ci.bazelrc  linux.bazelrc  rust-ci.yml  rust-release.yml  shell-tool-mcp.yml
codex-cli/: README.md
codex-cli/scripts/: build_npm_package.py  install_native_deps.py
codex-cli/src/components/: help-overlay.tsx
codex-cli/src/utils/: slash-commands.ts
codex-cli/tests/: clear-command.test.tsx  multiline-history-behavior.test.tsx  slash-commands.test.ts  terminal-chat-input-compact.test.tsx  terminal-chat-input-file-tag-suggestions.test.tsx  terminal-chat-input-multiline.test.tsx
codex-rs/: Cargo.toml  MODELS_STARTUP_PLAN.md  README.md  agentic.md  client.md  infty.md  infty2.md  justfile  patch.txt  reindeer.toml  rustfmt.toml  seed.md
codex-rs/.codex/: policy.codexpolicy
codex-rs/.config/: nextest.toml
codex-rs/ansi-escape/src/: lib.rs
codex-rs/api-client/: Cargo.toml  client.md
codex-rs/api-client/src/: aggregate.rs  api.rs  auth.rs  chat.rs  common.rs  error.rs  lib.rs  model_provider.rs  prompt.rs  responses.rs  routed_client.rs  stream.rs  wire.rs
codex-rs/api-client/src/client/: fixtures.rs  http.rs  mod.rs  rate_limits.rs  sse.rs
codex-rs/api-client/src/decode/: chat.rs  responses.rs
codex-rs/api-client/src/decode_wire/: chat.rs  responses.rs
codex-rs/api-client/src/payload/: chat.rs  responses.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-protocol/: api_upgrade_plan.md
codex-rs/app-server-protocol/src/: export.rs  jsonrpc_lite.rs  lib.rs  protocol.rs
codex-rs/app-server-test-client/src/: main.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  config_api.rs  fuzzy_file_search.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs  responses_delegate.rs
codex-rs/apply-patch/src/: lib.rs  parser.rs  seek_sequence.rs  (+1 more)
codex-rs/auto-updater/: Cargo.toml
codex-rs/auto-updater/src/: brew.rs  errors.rs  lib.rs
codex-rs/buck2/: codex_rust_toolchain.bzl  reindeer_macros.bzl
codex-rs/cli/: Cargo.toml
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/codex-api/: Cargo.toml
codex-rs/codex-infty/: Cargo.toml  README.md
codex-rs/codex-infty/src/: lib.rs  orchestrator.rs  progress.rs  prompts.rs  run_store.rs  session.rs  signals.rs  types.rs  utils.rs
codex-rs/codex-infty/src/prompts/: director.md  director.rs  mod.rs  solver.md  solver.rs  verifier.md  verifier.rs
codex-rs/codex-infty/src/roles/: director.rs  mod.rs  solver.rs  verifier.rs  verifier_pool.rs
codex-rs/codex-infty/tests/: orchestrator.rs  schemas.rs  timeouts.rs  verifier_replacement.rs
codex-rs/common/: Cargo.toml
codex-rs/core/: BUILD.bazel  Cargo.toml  caribou_prompt.md  config.schema.json  gpt-5.1-codex-max_prompt.md  gpt-5.2-codex_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md  prompt.md  root_agent_prompt.md  subagent_prompt.md
codex-rs/docs/: codex_mcp_interface.md  eval_capture.md  protocol_v1.md
codex-rs/eval-case/: Cargo.toml
codex-rs/eval-case/src/: lib.rs
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: Cargo.toml
codex-rs/execpolicy/: Cargo.toml  README.md
codex-rs/execpolicy2/: Cargo.toml  README.md
codex-rs/feedback/: Cargo.toml
codex-rs/feedback/src/: lib.rs
codex-rs/internal-storage/: Cargo.toml
codex-rs/linux-sandbox/: Cargo.toml
codex-rs/network-proxy/: Cargo.toml  README.md
codex-rs/network-proxy/src/: admin.rs  config.rs  http_proxy.rs  init.rs  lib.rs  main.rs  mitm.rs  policy.rs  responses.rs  socks5.rs  state.rs
codex-rs/notifier/: Cargo.toml  build.rs
codex-rs/ollama/: Cargo.toml
codex-rs/protocol/: Cargo.toml
codex-rs/provider-config/: Cargo.toml
codex-rs/provider-config/src/: lib.rs
codex-rs/responses-api-proxy/: README.md
codex-rs/rmcp-client/: Cargo.toml
codex-rs/scripts/: bench_codex_exec_non_login.py  build-linux-gnu.sh  build-linux.sh  gen_buck_first_party.py  gen_reindeer_fixups.py  patch_third_party_buck_for_tests.py
codex-rs/status/: Cargo.toml
codex-rs/status/src/: lib.rs
codex-rs/stdio-to-uds/: Cargo.toml
codex-rs/tui/: Cargo.toml  config.toml  migration_journal_template.md  migration_plan_template.md  prompt_for_continue_migration_command.md  prompt_for_migrate_command.md
codex-rs/tui2/: Cargo.toml
codex-rs/utils/pty/: Cargo.toml  README.md
codex-rs/utils/pty/src/: fallback.rs  lib.rs  pipe.rs  process.rs  pty.rs  tests.rs
codex-rs/utils/pty/tests/: arg0.rs
codex-rs/utils/tokenizer/: Cargo.toml
codex-rs/utils/tokenizer/src/: lib.rs
codex-rs/windows-sandbox-rs/: Cargo.toml  sandbox_smoketests.py
docs/: agents_md.md  authentication.md  buck2.md  config.md  config.schema.json  contributing.md  ctrl-c-quit-history.md  example-config.md  execpolicy.md  exit-confirmation-prompt-design.md  faq.md  install.md  migrations.md  network-proxy-design.md  network-proxy-quickstart.md  platform-sandboxing.md  prompts.md  release_management.md  rust-docs.md  sandbox.md  skills.md  slash_commands.md  tui-chat-composer.md
patches/: rules_rust_direct_deps.patch
prelude/: README.md
scripts/: buildifier  jsonrpc_exec_stub.py  setup_buck2_local.sh
sdk/python/: EXEC_PLAN.md  README.md  pyproject.toml
sdk/python/src/codex_sdk/: __init__.py  codex.py  exec.py  options.py  schema_file.py  thread.py  types.py
sdk/python/tests/: responses_proxy.py  test_sdk.py
sdk/typescript/: README.md  eslint.config.js
shell-tool-mcp/: README.md  jest.config.cjs  package.json  tsconfig.json  tsup.config.ts
shell-tool-mcp/src/: bashSelection.ts  constants.ts  index.ts  osRelease.ts  platform.ts  types.ts
shell-tool-mcp/tests/: bashSelection.test.ts  osRelease.test.ts
signatures/: cla.json
skills/yeet/: SKILL.md
(+893 files in other folders)
