[package]
name = "codex-api-client"
version.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["sync"] }
codex-protocol = { path = "../protocol" }

[lints]
workspace = true
