[package]
edition.workspace = true
name = "codex-feedback"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
codex-protocol = { workspace = true }
sentry = { version = "0.45" }
sentry-tracing = { version = "0.45", features = ["logs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[dev-dependencies]
pretty_assertions = { workspace = true }
