[package]
edition = "2021"
license.workspace = true
name = "codex-utils-pty"
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
portable-pty = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
