[package]
edition.workspace = true
name = "codex-utils-tokenizer"
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tiktoken-rs = "0.7"
tokio.workspace = true
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
